2024-9-22(三道LeetCode算法题+归并排序算法)

--- a/resources/一些常见的算法.md
+++ b/resources/一些常见的算法.md
@@ -1,3 +1,46 @@
+### 各种小细节
+
+#### 尽量少调用方法，调用方法的过程也会额外的消耗时间。
+
+- 虽然 `string.length()` 是一个简单的调用，并且其复杂度是 O(1)，但每次调用仍然涉及到函数跳转和状态保存的操作，这些操作带来了额外的开销。相比于直接使用一个已经存储好的值，重复调用方法需要更多的时间。
+
+  ```java
+  public class Main {
+      public static void main(String[] args) {
+          String string = "a".repeat(100000);
+  
+          long startTime = System.currentTimeMillis();
+          for (int i = 0; i < string.length(); i++)
+              System.out.print(" ");
+          long time1 = System.currentTimeMillis() - startTime;
+  
+          int n = string.length();
+          startTime = System.currentTimeMillis();
+          for (int i = 0; i < n; i++)
+              System.out.print(" ");
+          long time2 = System.currentTimeMillis() - startTime;
+  
+          System.out.println("\n多次调用函数消耗的时间: " + time1);
+          System.out.println("不多次调用函数消耗的时间: " + time2);
+          System.out.println("多花费的时间： " + (time1 - time2));
+      }
+  }
+  
+  /*
+  多次调用函数消耗的时间: 122
+  不多次调用函数消耗的时间: 101
+  多花费的时间： 21
+  */
+  ```
+
+#### 能使用数组就使用数组，不要使用 HashMap。
+
+- **数组 vs. HashMap**：尽量使用数组而不是 `HashMap`，尤其在可以直接通过索引访问元素的场景下。数组的访问时间复杂度为 O(1)，并且常数项较小，不存在哈希冲突的潜在问题。
+
+#### 使用 `toCharArray()` 代替 `charAt()`
+
+- **`toCharArray()` vs. `charAt()`**：在需要频繁访问字符串字符的情况下，使用 `toCharArray()` 将字符串转换为字符数组能提高访问效率，减少多次方法调用带来的性能开销。
+
 ## 单调栈
 
 - ##### [视频讲解](https://www.bilibili.com/video/BV1VN411J7S7/?vd_source=c2e5218acfbe25abdcd1b5b4b6f7f796)
@@ -23,7 +66,7 @@
 
 ### 介绍一下快速排序?
 
-- 快速排序采用了**分治递归**的思想。 **快速排序的核心思想是选择一个基准元素， 通过将数组中的元素按照基准元素进行划分， 使得左侧的元素都小于基准元素， 右侧的元素都大于基准元素。** 然后对左右两个子数组分别进行递归排序， 直到整个数组有序。  
+- 快速排序采用了**分治**的思想。 **快速排序的核心思想是选择一个基准元素， 通过将数组中的元素按照基准元素进行划分， 使得左侧的元素都小于基准元素， 右侧的元素都大于基准元素。** 然后对左右两个子数组分别进行递归排序， 直到整个数组有序。  
 - 具体实现：如果选择第一个元素为基准元素，首先利用一个指针从数组右边开始寻找一个比基准元素小的元素，然后再利用一个指针从数组左边开始寻找一个比基准元素大的元素，最后将这两个元素进行交换，一直重复前面的过程直到左指针等于右指针，再将基准元素和左指针指向的元素进行交换。这样就得到一个左侧都是小于基准元素右侧都是大于基准元素的数组。然后分别递归左右两个子数组重复前面的过程，直到整个数组有序。
 - 快速排序的平均时间复杂度是 O(nlogn)， 最坏时间复杂度是 O(n²)， 平均空间复杂度是 O(logn)，最坏空间复杂度是O(n)，是一种不稳定排序。  
 
@@ -69,3 +112,68 @@ public static void quickSort2(int[] arr, int start, int end) {
 }
 ```
 
+## [归并排序（Merge Sort）](https://blog.csdn.net/justidle/article/details/104203958)
+
+### 介绍一下归并排序？
+
+* 归并排序采用了**分治**的思想。归并排序的核心思想是<font color='red'>将待排序数组逐步分隔成单个元素，然后将这些单个元素合并成有序的数组。它通过不断的将两个有序的子数组合并成一个更大的有序数组，最终得到整个数组有序。</font>
+* 归并排序算法有两个基本的操作，一个是**分**，也就是把原数组划分成两个子数组的过程。另一个是**治**，它将两个有序数组合并成一个更大的有序数组。
+  * 将带排序的线性表不断地切分成若干个子表，直到每个子表只包含一个元素，这是，可以认为只包含一个元素的子表是有序表。
+  * 将子表两两合并，每合并一次，就会产生一个新的且更长的有序表，重复这一步骤，直到最后只剩下一个子表，这个子表就是排好序的线性表。
+
+![](image\归并排序原理图.jpg)
+
+```java
+/**
+ * 归并排序实现升序排序算法
+ * 首先就是通过递归的方式将数据划分成一个一个的元素，然后通过归并的方法将数组排序。
+ *
+ * @param arr   带排序的数组
+ * @param left  目标数组待排序的左指针
+ * @param right 目标数组待排序的右指针
+ * @return 返回归并后的有序数组
+ */
+public static int[] mergeSort(int[] arr, int left, int right) {
+    if (left == right)
+        return new int[]{arr[left]};
+    int mid = left + right >> 1;
+    int[] leftArr = mergeSort(arr, left, mid);
+    int[] rightArr = mergeSort(arr, mid + 1, right);
+    int[] mergeArr = new int[leftArr.length + rightArr.length];
+
+    int index = 0, i = 0, j = 0;
+    while (i < leftArr.length && j < rightArr.length)
+        mergeArr[index++] = leftArr[i] <= rightArr[j] ? leftArr[i++] : rightArr[j++];
+    while (i < leftArr.length)
+        mergeArr[index++] = leftArr[i++];
+    while (j < rightArr.length)
+        mergeArr[index++] = rightArr[j++];
+    return mergeArr;
+}
+```
+
+### 简述一下快速排序和归并排序的优缺点（从平均最坏时间复杂度、 空间复杂度、 稳定性的角度） ?
+
+#### 快速排序
+
+- 优点
+  - 排序速度快，平均时间复杂度为O(nlogn)。
+  - 不消耗额外的空间，空间时间复杂度为O(1)。（如果不考虑递归压栈消耗的空间）
+- 缺点
+  - 存在极端情况，如果待排序序列以及有序或近乎有序，时间复杂度退化为O(n^2)。
+  - 快速排序算法是一种不稳定的排序算法，在交换元素的过程中可能改变相同关键字元素的相对顺序。
+
+#### 归并排序
+
+- 优点
+  - 算法时间复杂度稳定，无论是平均还是最坏时间复杂度都是O(nlogn)。
+  - 归并排序是一种稳定的排序算法，它能够保持相同关键字元素的相对顺序不变。
+  - 适用于外部排序，归并排序的特点使其非常适用于外部排序，即当排序的数据量太大无法完全加载到内存时，可以通过分阶段地读取和写入数据进行排序。
+- 缺点
+  - 消耗额外的空间，空间复杂度为O(n)。
+
+### 归并排序的最坏时间复杂度优于快排， 为什么我们还是选择快排？   
+
+- 快速排序通常比归并排序更快。尽管快速排序在最坏的情况下的性能比较差，但是大多数情况下，它的平均时间复杂度要比归并排序低。
+  - 因为它是原地排序算法，不需要额外的辅助空间，减少了许多不必要的操作时间。（例如，频繁的复制元素、内存的分配与释放等操作。）
+- 快速排序是原地排序算法。空间复杂度低，在原始数组上进行排序操作，不需要额外的存储空间。
