2024-10-7(插入+选择+冒泡排序算法，一些常规的排序算法题)

--- a/resources/一些常见的算法.md
+++ b/resources/一些常见的算法.md
@@ -1,6 +1,6 @@
-### 各种小细节
+# 各种小细节
 
-#### 尽量少调用方法，调用方法的过程也会额外的消耗时间。
+## 尽量少调用方法，调用方法的过程也会额外的消耗时间。
 
 - 虽然 `string.length()` 是一个简单的调用，并且其复杂度是 O(1)，但每次调用仍然涉及到函数跳转和状态保存的操作，这些操作带来了额外的开销。相比于直接使用一个已经存储好的值，重复调用方法需要更多的时间。
 
@@ -33,26 +33,13 @@
   */
   ```
 
-#### 能使用数组就使用数组，不要使用 HashMap。
+## 能使用数组就使用数组，不要使用 HashMap。
 
 - **数组 vs. HashMap**：尽量使用数组而不是 `HashMap`，尤其在可以直接通过索引访问元素的场景下。数组的访问时间复杂度为 O(1)，并且常数项较小，不存在哈希冲突的潜在问题。
 
-#### 使用 `toCharArray()` 代替 `charAt()`
+## 使用 `toCharArray()` 代替 `charAt()`
 
 - **`toCharArray()` vs. `charAt()`**：在需要频繁访问字符串字符的情况下，使用 `toCharArray()` 将字符串转换为字符数组能提高访问效率，减少多次方法调用带来的性能开销。
-
-## 单调栈
-
-- ##### [视频讲解](https://www.bilibili.com/video/BV1VN411J7S7/?vd_source=c2e5218acfbe25abdcd1b5b4b6f7f796)
-
-## [岛屿类问题的通用解法、DFS遍历框架](https://leetcode.cn/problems/number-of-islands/solutions/211211/dao-yu-lei-wen-ti-de-tong-yong-jie-fa-dfs-bian-li-/?envType=study-plan-v2&envId=top-interview-150)
-
-- [LeetCode第200题](https://leetcode.cn/problems/number-of-islands/description/?envType=study-plan-v2&envId=top-interview-150)
-- [LeetCode第463题](https://leetcode.cn/problems/island-perimeter/description/)
-
-- [LeetCode第695题](https://leetcode.cn/problems/max-area-of-island/description/)
-
-- [LeetCode第827题](https://leetcode.cn/problems/making-a-large-island/description/)
 
 # 十大经典排序算法
 
@@ -61,6 +48,87 @@
 #### 为什么排序需要稳定？
 
 - 排序算法的稳定性意味着对于具有相同关键字的元素， 排序后它们的相对顺序保持不变。在很多实际应用中， 我们需要保持数据中相等元素的顺序关系。 例如， 在排序员工工资的数据时， 如果有多名员工拥有相同的工资水平， 我们可能希望按照他们的入职时间来排序， 以维持他们在公司内部的先后顺序。 如果使用不稳定排序， 就可能打乱他们的相对顺序。  
+
+## [插入排序（Insertion Sort）](https://blog.csdn.net/guoweimelon/article/details/50904206)
+
+### 介绍一下插入排序？
+
+- 插入排序的工作原理类似于整理扑克牌。
+- 该算法将待排序的元素分为已排序区和未排序区，每次从未排序区中取出一个元素，插入到已排序区的适当位置，直到所有元素都被插入完毕。
+- 插入排序的平均时间复杂度为O(n^2)，最坏时间复杂度为O(n^2)，空间复杂度为O(1)，是一种稳定排序。
+- 在插入元素寻找最合适的位置时，可以<font color='red'>使用折半查找方法来减少比较次数，但是元素的移动次数不变。所以时间和空间复杂度都没有发生变化。</font>
+
+```java
+/**
+ * 插入排序实现升序排序，
+ *
+ * @param arr 待排序的数组
+ */
+public static void insertionSort(int[] arr) {
+    for (int i = 1; i < arr.length; i++) {
+        if (arr[i] < arr[i - 1]) {
+            int temp = arr[i], j;
+            for (j = i - 1; j >= 0 && arr[j] > temp; j--)
+                arr[j + 1] = arr[j];
+            arr[j + 1] = temp;
+        }
+    }
+}
+```
+
+## 选择排序（Selection Sort）
+
+### 介绍一下选择排序？
+
+- ① 将数组分为已排序区和未排序区。初始时，已排序区间为空，而未排序区包含所有元素。
+- ② 从未排序区间中遍历找到最小的元素，并记录其索引。
+- ③ 将最小元素和未排序区的第一个元素交换位置，将其放入已排序区的末尾。
+- ④ 重复步骤②和③，直到未排序区的元素全部交换完毕，得到最终的有序数组。
+- 选择排序的平均时间复杂度是O(n^2)，最坏时间复杂度是O(n^2)，空间复杂度是O(1)，是一种不稳定排序。
+
+```java
+/**
+ * 选择排序实现升序排序
+ *
+ * @param arr 待排序的数组
+ */
+public static void selectionSort(int[] arr) {
+    int min;
+    for (int i = 0; i < arr.length; i++) {
+        min = i;
+        for (int j = i + 1; j < arr.length; j++) {
+            if (arr[j] < arr[min])
+                min = j;
+        }
+        swap(arr, i, min);
+    }
+}
+```
+
+## [冒泡排序（Bubble Sort）](https://blog.csdn.net/guoweimelon/article/details/50902597)
+
+### 介绍一下冒泡排序？
+
+- <font color='red'>冒泡排序就是重复地遍历待排序数组，依次比较相邻的元素，并将较大的元素交换到右侧，从而逐步将最大的元素沉到数组的末尾。</font>
+- 相邻元素比较，如果前面元素比后面更大，则交换位置。第一轮把最大的元素放到末尾，第二轮把第二大的元素放到倒数第二个位置，直到所有元素都排好序。
+- 冒泡排序的平均时间复杂度是O(n^2)，最坏时间复杂为O(n^2)，空间复杂度O(1)，是一种稳定排序。
+
+```java
+/**
+ * 冒泡排序实现升序排序
+ *
+ * @param arr 待排序的数组
+ */
+public static void bubbleSort(int[] arr) {
+    for (int i = 0; i < arr.length - 1; i++) {
+        for (int j = 0; j < arr.length - i - 1; j++) {
+            if (arr[j] > arr[j + 1]) {
+                swap(arr, j, j + 1);
+            }
+        }
+    }
+}
+```
 
 ## [快速排序（Quick Sort）](https://blog.csdn.net/qq_39181839/article/details/109478094)
 
@@ -177,3 +245,16 @@ public static int[] mergeSort(int[] arr, int left, int right) {
 - 快速排序通常比归并排序更快。尽管快速排序在最坏的情况下的性能比较差，但是大多数情况下，它的平均时间复杂度要比归并排序低。
   - 因为它是原地排序算法，不需要额外的辅助空间，减少了许多不必要的操作时间。（例如，频繁的复制元素、内存的分配与释放等操作。）
 - 快速排序是原地排序算法。空间复杂度低，在原始数组上进行排序操作，不需要额外的存储空间。
+
+# 单调栈
+
+- ##### [视频讲解](https://www.bilibili.com/video/BV1VN411J7S7/?vd_source=c2e5218acfbe25abdcd1b5b4b6f7f796)
+
+# [岛屿类问题的通用解法、DFS遍历框架](https://leetcode.cn/problems/number-of-islands/solutions/211211/dao-yu-lei-wen-ti-de-tong-yong-jie-fa-dfs-bian-li-/?envType=study-plan-v2&envId=top-interview-150)
+
+- [LeetCode第200题](https://leetcode.cn/problems/number-of-islands/description/?envType=study-plan-v2&envId=top-interview-150)
+- [LeetCode第463题](https://leetcode.cn/problems/island-perimeter/description/)
+
+- [LeetCode第695题](https://leetcode.cn/problems/max-area-of-island/description/)
+
+- [LeetCode第827题](https://leetcode.cn/problems/making-a-large-island/description/)
